# self_examination

./: .gitignore  README.md
ca_maker/: build-ca.conf  build-ca.sh
script/: make_pkg  run_dev  run_rel
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: lib.rs  prelude.rs  tbl_article.rs  tbl_file.rs  tbl_log.rs  tbl_pdf_article.rs  tbl_pdf_article_access_log.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20250703_151630_create_tbl_article.rs  m20250703_153326_create_tbl_log.rs  m20250711_022548_create_tbl_file.rs  m20250716_151156_create_tbl_pdf_article.rs  m20250717_002329_create_tbl_pdf_article_access_log.rs
server/server/: Cargo.toml
server/server/config/: log4rs.yml  server.toml  zhaogj-ca.crt  zhaogj-ca.key
server/server/src/: article.rs  auth.rs  config.rs  file.rs  home.rs  lib.rs  log.rs  main.rs  pdf_article.rs  pdf_article_access_log.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: App.tsx  AppLayout.tsx  Article.tsx  ArticlePage.tsx  FilePage.tsx  HomePage.tsx  Log.tsx  LogPage.tsx  LoginPage.tsx  PdfArticleAccessLogQueryPage.tsx  PdfArticleDetailPage.tsx  PdfArticleQueryPage.tsx  PdfPage.tsx  RESTfulApi.tsx  main.tsx
