[package]
edition = "2024"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = "0.8"
entity = {path = "../entity"}
log = "0.4"
log4rs = "1.3"
migration = {path = "../migration"}
openssl = {version = "0.10", features = ["vendored"]}
sea-orm = {version = "1.1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
validator = {version = "0.20", features = ["derive"]}
